--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
-chromedriver=c:/Users/SeleniumDrivers/chromedriver.exe 
-geckodriver=c:/Users/SeleniumDrivers/geckodriver.exe 
+//chromedriver=c:/Users/SeleniumDrivers/chromedriver.exe
+chromedriver=/Users/volchek/Downloads/chromedriver
+geckodriver=c:/Users/SeleniumDrivers/geckodriver.exe
 url=http://realtor.com
 userLogin=6252750@gmail.com
 userPassword=Tatiki321
