--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,37 @@
             <version>3.14.0</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+                <configuration>
+                    <!-- <suiteXmlFiles> <suiteXmlFile>${basedir}/testng.xml</suiteXmlFile> </suiteXmlFiles> -->
+                    <!-- c:\Temp>java org.testng.TestNG -groups regressiontest - testname AllTests-->
+                    <!--<groups>regressiontest</groups> -->
+                    <!-- <trimStackTrace>false</trimStackT;race> -->
+                    <!--<suitename>AllTests</suitename>-->
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${basedir}/resources/SampleSuite.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <suitename>RealtorSuite</suitename>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
+        </plugins>
+        <resources>
+             <!--<resource> <directory>src/test/resources</directory> </resource>-->
+        </resources>
+    </build>
 
 </project>
