--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,9 @@
             <version>3.14.0</version>
         </dependency>
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>1.2.5</version>
-            <scope>test</scope>
+            <version>4.0.0</version>
         </dependency>
         <dependency>
             <groupId>info.cukes</groupId>
