--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,18 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
+                    <properties>
+                        <property>
+                            <name>usedefaultlisteners</name>
+                            <value>true</value>
+                        </property>
+                        <property>
+                            <name>listener</name>
+                            <value>
+                                org.uncommons.reportng.HTMLReporter,
+                            </value>
+                        </property>
+                    </properties>
                     <suiteXmlFiles>
                         <suitXmlFile>${basedir}\src\test\resources\SampleSuite.xml</suitXmlFile>
                     </suiteXmlFiles>
@@ -79,5 +91,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
