--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
                     <properties>
                         <property>
                             <name>usedefaultlisteners</name>
-                            <value>true</value>
+                            <value>false</value>
                         </property>
                         <property>
                             <name>listener</name>
