--- a/pom.xml
+++ b/pom.xml
@@ -63,21 +63,18 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
-                    <properties>
-                        <property>
-                            <name>usedefaultlisteners</name>
-                            <value>false</value>
-                        </property>
-                        <property>
-                            <name>listener</name>
-                            <value>
-                                org.uncommons.reportng.HTMLReporter
-                            </value>
-                        </property>
-                    </properties>
                     <suiteXmlFiles>
                         <suitXmlFile>${basedir}\src\test\resources\SampleSuite.xml</suitXmlFile>
                     </suiteXmlFiles>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
