--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
             <groupId>org.uncommons</groupId>
             <artifactId>reportng</artifactId>
             <version>1.1.4</version>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
         </dependency>
     </dependencies>
 
@@ -63,6 +63,18 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
+                    <!--<properties>-->
+                        <!--<property>-->
+                            <!--<name>usedefaultlisteners</name>-->
+                            <!--<value>false</value>-->
+                        <!--</property>-->
+                        <!--<property>-->
+                            <!--<name>listener</name>-->
+                            <!--<value>-->
+                                <!--org.uncommons.reportng.HTMLReporter-->
+                            <!--</value>-->
+                        <!--</property>-->
+                    <!--</properties>-->
                     <suiteXmlFiles>
                         <suitXmlFile>${basedir}\src\test\resources\SampleSuite.xml</suitXmlFile>
                     </suiteXmlFiles>
