--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,6 @@
 # Root logger option
 log4j.rootLogger=INFO, stdout, file, HTML
+log4j.logger.org.apache.http=ERROR
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
