--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <artifactId>logger-java-log4j</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.0.0-beta1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
