--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,3 +5,5 @@ userLogin=6252750@gmail.com
 userPassword=Tatiki321
 implicitlyWaitTime=30
 webDriverWaitTime=30
+remoteURL = http://localhost:5555/wd/hub
+
