--- a/pom.xml
+++ b/pom.xml
@@ -61,14 +61,9 @@
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-java</artifactId>
+            <artifactId>cucumber-java8</artifactId>
             <version>4.0.1</version>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-expressions</artifactId>
-            <version>4.0.3</version>
         </dependency>
     </dependencies>
 
