--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <version>6.14.3</version>
         </dependency>
         <dependency>
+            <groupId>com.epam.jira</groupId>
+            <artifactId>test-management-adapter</artifactId>
+            <version>1.8</version>
+        </dependency>
+        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>3.14.0</version>
