--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
             <artifactId>selenium-java</artifactId>
             <version>3.14.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.epam.jira</groupId>
+            <artifactId>test-management-adapter</artifactId>
+            <version>1.8</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/test-management-adapter-1.8-jar-with-dependencies.jar</systemPath>
+        </dependency>
 
         <dependency>
             <groupId>com.epam.reportportal</groupId>
