--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,13 @@
             <version>1.1.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.epam.jira</groupId>
+            <artifactId>test-management-adapter</artifactId>
+            <version>1.8</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/test-management-adapter-1.8-jar-with-dependencies.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
