--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <java.version>1.8</java.version>
         <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
         <aspectj.version>1.8.10</aspectj.version>
-        <allure-testng.version>2.6.0</allure-testng.version>
+        <allure-testng.version>2.7.0</allure-testng.version>
 
     </properties>
 
@@ -31,6 +31,11 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
@@ -142,5 +147,4 @@
                 </plugin>
             </plugins>
     </build>
-
 </project>
