add JIRA annotations

--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
                 <version>2.22.1</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suitXmlFile>${basedir}\src\test\resources\bddRun.xml</suitXmlFile>
+                        <suitXmlFile>${basedir}\src\test\resources\RealtorSuite.xml</suitXmlFile>
                     </suiteXmlFiles>
                     <argLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"</argLine>
                     <systemProperties>
