--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
             <version>7.0.0-beta1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>6.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
