from amob compukter

--- a/src/main/resources/Nexus5.properties
+++ b/src/main/resources/Nexus5.properties
@@ -1,5 +1,5 @@
 device=Android
-deviceName=Nexus5.properties;
+deviceName=Nexus5
 platformName=Android
 app=C://realtor.apk
 appPackage=com.move.realtor
